# samsa

./: .pre-commit-config.yaml  CONFIG_GUIDE.md  Cargo.toml  Dockerfile.etcd  LICENSE  Makefile  README.md  build.rs  build_for_tests.sh  cliff.toml  coverage.txt  deny.toml  docker-compose.test.yml  run_consolidated_tests.sh
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml  rust.yml  security.yml
config/: database.toml  development.toml  example.toml  production.toml
examples/: cli_demo.sh  simple_client.rs
migrations/: 001_initial_schema.sql
proto/: samsa.proto
src/: lib.rs
src/cli/: CLI_README.md  main.rs
src/common/: batch.rs  config.rs  conversions.rs  db.rs  error.rs  etcd_client.rs  jwt.rs  metadata.rs  metrics.rs  mod.rs  observability.rs  postgres_metadata_repository.rs  storage.rs
src/server/: main.rs  mod.rs
src/server/handlers/: account.rs  bucket.rs  mod.rs  stream.rs
tests/: README.md  batch_tests.rs  bucket_handler_tests.rs  cli_tests.rs  config_tests.rs  consolidated_tests.rs  conversions_tests.rs  db_tests.rs  error_tests.rs  etcd_client_tests.rs  metadata_tests.rs  metrics_tests.rs  observability_tests.rs  postgres_metadata_tests.rs  server_handlers_tests.rs  server_main_tests.rs  test_utils.rs  unit_tests.rs  uuid_v7_tests.rs
